Handle WORD_REGISTER_OPERATIONS when reloading (subreg (reg))

gcc/
	PR target/78660
	* lra-constraints.c (curr_insn_transform): Handle
	WORD_REGISTER_OPERATIONS requirements when reloading SUBREGs.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@245598 138bc75d-0d04-0410-961f-82ee72b054a4